Release 1.3.5 - FindBugs team
- fixed bug 2032970: Eclipse plugin confused which generics in inner class declarations (Andrei Loskutov)
- fix for FB warnings reported on inner classes but shown at parent class declaration (Andrei Loskutov)
- fix for bug 2030157: problem selection is broken on 3.4 (Andrei Loskutov)
- fix for bug 2023146: annotate from Problems View is broken on 3.4 (Andrei Loskutov)
- fix for bug 2030167: no working set content shown (Andrei Loskutov)
- fix for bug 1982455: exclude baseline bugs setting not saved in preferences (Andrei Loskutov)

Release 1.3.3 - FindBugs team
- new feature: export basic FindBugs numbers for projects via File->Export->Java->BugCounts (Andrei Loskutov)
- new feature: jobs for different projects will be run in parallel per default if running on a
  multi-core PC ("fb.allowParallelBuild" system property not used anymore) (Andrei Loskutov)
- fixed performance slowdown in the multi-threaded build, caused by workspace operation locks during
 assigning marker attributes (Andrei Loskutov)

Release 1.3.2 - FindBugs team
- new feature: added Bug explorer view (replacing Bug tree view), based on Common Navigator framework (Andrei Loskutov)
- bug 1873860 fixed: empty projects are no longer shown in Bug tree view  (Andrei Loskutov)
- new feature: bug counts decorators for projects, folders and files (has to be activated
  via Preferences -> general -> appearance -> label decorations)(Andrei Loskutov)
- patch 1746499: better icons (Alessandro Nistico)
- patch 1893685: Find bug actions on change sets bug (Alessandro Nistico)
- fixed bug 1855384: Bug configuration is broken in Eclipse (Andrei Loskutov)
- refactored FindBugs properties page (Andrei Loskutov)
- refactored FindBugs worker/builder/run action (Andrei Loskutov)
- partial fix for bug 1186991: FB detects now only bugs from classes on project's classpath (no double work on
  duplicated class files) (Andrei Loskutov)